mosfhet/mosfhet-sys/MOSFHET/include/mosfhet.h

typedef uint32_t Torus;
typedef uint64_t Torus;
/* Polynomials */
typedef struct {
  Torus * coeffs;
  int N;
} * TorusPolynomial;
typedef struct {
  double * coeffs;
  int N;
} * DFT_Polynomial;
typedef TorusPolynomial IntPolynomial;
typedef Torus Integer;
/* TLWE */
typedef struct {
  Torus * a, b;
  int n;
} * TLWE;
typedef struct {
  Integer * s;
  int n;
  double sigma;
} * TLWE_Key;
/* TRLWE */
typedef struct {
  TorusPolynomial * a, b;
  int k;
} * TRLWE;
typedef struct {
  DFT_Polynomial * a, b;
  int k;
} * TRLWE_DFT;
typedef struct {
  IntPolynomial * s;
  int k;
  double sigma;
} * TRLWE_Key;
typedef struct {
  TRLWE_DFT ** s;
  int base_bit, t, k;
} * TRLWE_KS_Key;
typedef struct {
  TRLWE **** s;
  int base_bit, t, torus_base, n;
} * LUT_Packing_KS_Key;
typedef struct {
  TRLWE *** s;
  int base_bit, t, n, include_b;
} * Generic_KS_Key;
/* TRGSW */
typedef struct {
  TRLWE * samples;
  int l, Bg_bit;
} * TRGSW;
typedef struct {
  TRLWE_DFT * samples;
  int l, Bg_bit;
} * TRGSW_DFT;
typedef struct {
  TRLWE_Key trlwe_key;
  int l, Bg_bit;
} * TRGSW_Key;
/* Registers */

typedef struct {
  TRGSW_DFT positive, negative;
} * TRGSW_REG;
/* Bootstrap */

typedef struct {
  TRGSW_DFT * s;
  TRGSW * su;
  int n, k, N, Bg_bit, l, unfolding;
} * Bootstrap_Key;
typedef struct {
  TRGSW_DFT * s;
  TRGSW * su;
  TRLWE_KS_Key * ak;
  int n, k, N, Bg_bit, l, unfolding;
} * Bootstrap_GA_Key;
TRGSW trgsw_load_new_sample(FILE * fd, int l, int Bg_bit, int k, int N);
void trgsw_load_sample(FILE * fd, TRGSW c);
void trgsw_load_DFT_sample(FILE * fd, TRGSW_DFT out);
void trgsw_save_DFT_sample(FILE * fd, TRGSW_DFT c);
TRGSW_DFT trgsw_load_new_DFT_sample(FILE * fd, int l, int Bg_bit, int k, int N);
void trgsw_save_sample(FILE * fd, TRGSW c);
void trgsw_sub(TRGSW out, TRGSW in1, TRGSW in2);
void trgsw_add(TRGSW out, TRGSW in1, TRGSW in2);
void trgsw_DFT_sub(TRGSW_DFT out, TRGSW_DFT in1, TRGSW_DFT in2);
void trgsw_addto(TRGSW out, TRGSW in);
void trgsw_mul_by_xai(TRGSW out, TRGSW in, int a);
void trgsw_mul_by_xai_addto(TRGSW out, TRGSW in, int a);
void trgsw_mul_by_xai_minus_1(TRGSW out, TRGSW in, int a);
void trgsw_to_DFT(TRGSW_DFT out, TRGSW in);
void trgsw_from_DFT(TRGSW out, TRGSW_DFT in);
void trgsw_mul_trlwe_DFT(TRLWE_DFT out, TRLWE in1, TRGSW_DFT in2);
void trgsw_mul_DFT2(TRGSW_DFT out, TRGSW_DFT in1, TRGSW_DFT in2);
void trgsw_mul_DFT(TRGSW_DFT out, TRGSW in1, TRGSW_DFT in2);
void trgsw_naive_mul_trlwe(TRLWE out, TRLWE in1, TRGSW in2);
void trgsw_naive_mul(TRGSW out, TRGSW in1, TRGSW in2);
void trgsw_copy(TRGSW out, TRGSW in);
void trgsw_DFT_copy(TRGSW_DFT out, TRGSW_DFT in);
void free_trgsw(void * p);
void free_trgsw_array(void * p_v, int count);
void free_trgsw_key(TRGSW_Key key);
void trgsw_mul_trlwe_DFT_prefetch(TRLWE_DFT out, TRLWE in1, TRGSW_DFT in2);
void trgsw_DFT_mul_addto_by_polynomial(TRGSW_DFT out, TRGSW_DFT in1, DFT_Polynomial in2);
/* Registers */
TRGSW_REG trgsw_reg_alloc(int l, int Bg_bit, int k, int N);
TRGSW_REG * trgsw_reg_alloc_array(int count, int l, int Bg_bit, int k, int N);
void trgsw_reg_sample(TRGSW_REG out,  Torus m, TRGSW_Key key);
void trgsw_reg_copy(TRGSW_REG out, TRGSW_REG in);
void trgsw_reg_add(TRGSW_REG out, TRGSW_REG in1, TRGSW_REG in2);
void trgsw_reg_negate(TRGSW_REG reg);
void trgsw_reg_sub(TRGSW_REG out, TRGSW_REG in1, TRGSW_REG in2);
void trgsw_reg_subto(TRGSW_REG out, TRGSW_REG in);
void trgsw_reg_addto(TRGSW_REG out, TRGSW_REG in1);
void free_trgsw_reg(TRGSW_REG p);
void free_trgsw_reg_array(TRGSW_REG * p, int count);
/* Key Switch */
TRLWE_KS_Key trlwe_new_KS_key(TRLWE_Key out_key, TRLWE_Key in_key, int t, int base_bit);
void trlwe_keyswitch(TRLWE out, TRLWE in, TRLWE_KS_Key ks_key);
void free_trlwe_ks_key(TRLWE_KS_Key key);
LUT_Packing_KS_Key trlwe_new_packing_KS_key(TRLWE_Key out_key, TLWE_Key in_key, int t, int base_bit, int torus_base);
void trlwe_packing_keyswitch(TRLWE out, TLWE * in, LUT_Packing_KS_Key ks_key);
LUT_Packing_KS_Key trlwe_load_new_packing_KS_key(FILE * fd);
void trlwe_save_packing_KS_key(FILE * fd, LUT_Packing_KS_Key key);
void trlwe_torus_packing(TRLWE out, Torus * in, int torus_base);
void free_trlwe_packing_ks_key(LUT_Packing_KS_Key key);
TRLWE_KS_Key trlwe_new_RL_key(TRLWE_Key key, int t, int base_bit);
void trlwe_packing1_keyswitch(TRLWE out, TLWE in, Generic_KS_Key ks_key);
Generic_KS_Key trlwe_new_priv_SK_KS_key(TRLWE_Key out_key, TLWE_Key in_key, int t, int base_bit);
void trlwe_priv_keyswitch(TRLWE out, TLWE in, Generic_KS_Key ks_key);
void free_trlwe_generic_ks_key(Generic_KS_Key key);
Generic_KS_Key trlwe_new_packing1_KS_key(TRLWE_Key out_key, TLWE_Key in_key, int t, int base_bit);
TRLWE_KS_Key * trlwe_new_packing1_KS_key_CDKS21(TRLWE_Key out_key, TLWE_Key in_key, int t, int base_bit);
void trlwe_packing1_keyswitch_CDKS21(TRLWE out, TLWE in, TRLWE_KS_Key * ks_key);
TRLWE_KS_Key * trlwe_new_automorphism_KS_keyset(TRLWE_Key key, bool skip_even, int t, int base_bit);
TRLWE_KS_Key trlwe_new_full_packing_KS_key(TRLWE_Key out_key, TLWE_Key in_key, int t, int base_bit);
void trlwe_full_packing_keyswitch(TRLWE out, TLWE * in, uint64_t size, TRLWE_KS_Key ks_key);
void trlwe_save_generic_ks_key(FILE * fd, Generic_KS_Key key);
Generic_KS_Key trlwe_load_new_generic_ks_key(FILE * fd);
TRLWE_KS_Key * trlwe_new_priv_KS_key(TRLWE_Key out_key, TRLWE_Key in_key, int t, int base_bit);
void trlwe_priv_keyswitch_2(TRLWE out, TRLWE in, TRLWE_KS_Key * ks_key);
void trlwe_save_KS_key(FILE * fd, TRLWE_KS_Key key);
TRLWE_KS_Key trlwe_load_new_KS_key(FILE * fd);
/* Bootstrap */
Bootstrap_Key new_bootstrap_key(TRGSW_Key out_key, TLWE_Key in_key, int unfolding);
void blind_rotate(TRLWE tv, Torus * a, TRGSW_DFT * s, int size);
void functional_bootstrap_wo_extract(TRLWE out, TRLWE tv, TLWE in, Bootstrap_Key s, int torus_base);
void multivalue_bootstrap_phase1(TRLWE * out, TLWE in, Bootstrap_Key s, int torus_base);
void multivalue_bootstrap_phase2(TLWE out, int * in, TRLWE * rotated_tv, int torus_base, int log_torus_base);
void functional_bootstrap_trgsw_phase1(TRGSW_DFT out, TLWE in, Bootstrap_Key s, int torus_base);
void functional_bootstrap_trgsw_phase2(TLWE out, TRGSW_DFT in, TRLWE tv);
void free_bootstrap_key(Bootstrap_Key key);
void save_bootstrap_key(FILE * fd, Bootstrap_Key key);
Bootstrap_Key load_new_bootstrap_key(FILE * fd);
void multivalue_bootstrap_CLOT21(TLWE * out, TRLWE tv, TLWE in, Bootstrap_Key key, int torus_base, int n_luts);
void multivalue_bootstrap_UBR_phase1(TRGSW_DFT * out, TLWE in, Bootstrap_Key key);
void multivalue_bootstrap_UBR_phase2(TLWE out, TRLWE tv, TLWE in, TRGSW_DFT * sa, Bootstrap_Key key, int torus_base);
/* Misc */ 
void generate_rnd_seed(uint64_t * p);
void generate_random_bytes(uint64_t amount, uint8_t * pointer);
double generate_normal_random(double sigma);
void generate_torus_normal_random_array(Torus * out, double sigma, int N);
/* Bootstrap using Galois Automorphisms */
Bootstrap_GA_Key new_bootstrap_key_ga(TRGSW_Key out_key, TLWE_Key in_key);
void functional_bootstrap_wo_extract_ga(TRLWE out, TRLWE tv, TLWE in, Bootstrap_GA_Key key, int torus_base);
void functional_bootstrap_ga(TLWE out, TRLWE tv, TLWE in, Bootstrap_GA_Key key, int torus_base);
void free_bootstrap_key_ga(Bootstrap_GA_Key key);