mosfhet/mosfhet-sys/src/bindings.rs

extern "C" {
    pub fn trgsw_load_new_sample(
        fd: *mut FILE,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRGSW;
}
extern "C" {
    pub fn trgsw_load_sample(fd: *mut FILE, c: TRGSW);
}
extern "C" {
    pub fn trgsw_load_DFT_sample(fd: *mut FILE, out: TRGSW_DFT);
}
extern "C" {
    pub fn trgsw_save_DFT_sample(fd: *mut FILE, c: TRGSW_DFT);
}
extern "C" {
    pub fn trgsw_load_new_DFT_sample(
        fd: *mut FILE,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRGSW_DFT;
}
extern "C" {
    pub fn trgsw_save_sample(fd: *mut FILE, c: TRGSW);
}
extern "C" {
    pub fn trgsw_sub(out: TRGSW, in1: TRGSW, in2: TRGSW);
}
extern "C" {
    pub fn trgsw_add(out: TRGSW, in1: TRGSW, in2: TRGSW);
}
extern "C" {
    pub fn trgsw_DFT_sub(out: TRGSW_DFT, in1: TRGSW_DFT, in2: TRGSW_DFT);
}
extern "C" {
    pub fn trgsw_addto(out: TRGSW, in_: TRGSW);
}
extern "C" {
    pub fn trgsw_mul_by_xai(out: TRGSW, in_: TRGSW, a: ::libc::c_int);
}
extern "C" {
    pub fn trgsw_mul_by_xai_addto(out: TRGSW, in_: TRGSW, a: ::libc::c_int);
}
extern "C" {
    pub fn trgsw_mul_by_xai_minus_1(out: TRGSW, in_: TRGSW, a: ::libc::c_int);
}
extern "C" {
    pub fn trgsw_to_DFT(out: TRGSW_DFT, in_: TRGSW);
}
extern "C" {
    pub fn trgsw_from_DFT(out: TRGSW, in_: TRGSW_DFT);
}
extern "C" {
    pub fn trgsw_mul_trlwe_DFT(out: TRLWE_DFT, in1: TRLWE, in2: TRGSW_DFT);
}
extern "C" {
    pub fn trgsw_mul_DFT2(out: TRGSW_DFT, in1: TRGSW_DFT, in2: TRGSW_DFT);
}
extern "C" {
    pub fn trgsw_mul_DFT(out: TRGSW_DFT, in1: TRGSW, in2: TRGSW_DFT);
}
extern "C" {
    pub fn trgsw_naive_mul_trlwe(out: TRLWE, in1: TRLWE, in2: TRGSW);
}
extern "C" {
    pub fn trgsw_naive_mul(out: TRGSW, in1: TRGSW, in2: TRGSW);
}
extern "C" {
    pub fn trgsw_copy(out: TRGSW, in_: TRGSW);
}
extern "C" {
    pub fn trgsw_DFT_copy(out: TRGSW_DFT, in_: TRGSW_DFT);
}
extern "C" {
    pub fn free_trgsw(p: *mut ::libc::c_void);
}
extern "C" {
    pub fn free_trgsw_array(p_v: *mut ::libc::c_void, count: ::libc::c_int);
}
extern "C" {
    pub fn free_trgsw_key(key: TRGSW_Key);
}
extern "C" {
    pub fn trgsw_mul_trlwe_DFT_prefetch(
        out: TRLWE_DFT,
        in1: TRLWE,
        in2: TRGSW_DFT,
    );
}
extern "C" {
    pub fn trgsw_DFT_mul_addto_by_polynomial(
        out: TRGSW_DFT,
        in1: TRGSW_DFT,
        in2: DFT_Polynomial,
    );
}
extern "C" {
    pub fn trgsw_reg_alloc(
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> TRGSW_REG;
}
extern "C" {
    pub fn trgsw_reg_alloc_array(
        count: ::libc::c_int,
        l: ::libc::c_int,
        Bg_bit: ::libc::c_int,
        k: ::libc::c_int,
        N: ::libc::c_int,
    ) -> *mut TRGSW_REG;
}
extern "C" {
    pub fn trgsw_reg_sample(out: TRGSW_REG, m: Torus, key: TRGSW_Key);
}
extern "C" {
    pub fn trgsw_reg_copy(out: TRGSW_REG, in_: TRGSW_REG);
}
extern "C" {
    pub fn trgsw_reg_add(out: TRGSW_REG, in1: TRGSW_REG, in2: TRGSW_REG);
}
extern "C" {
    pub fn trgsw_reg_negate(reg: TRGSW_REG);
}
extern "C" {
    pub fn trgsw_reg_sub(out: TRGSW_REG, in1: TRGSW_REG, in2: TRGSW_REG);
}
extern "C" {
    pub fn trgsw_reg_subto(out: TRGSW_REG, in_: TRGSW_REG);
}
extern "C" {
    pub fn trgsw_reg_addto(out: TRGSW_REG, in1: TRGSW_REG);
}
extern "C" {
    pub fn free_trgsw_reg(p: TRGSW_REG);
}
extern "C" {
    pub fn free_trgsw_reg_array(p: *mut TRGSW_REG, count: ::libc::c_int);
}
extern "C" {
    pub fn trlwe_new_KS_key(
        out_key: TRLWE_Key,
        in_key: TRLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> TRLWE_KS_Key;
}
extern "C" {
    pub fn trlwe_keyswitch(out: TRLWE, in_: TRLWE, ks_key: TRLWE_KS_Key);
}
extern "C" {
    pub fn free_trlwe_ks_key(key: TRLWE_KS_Key);
}
extern "C" {
    pub fn trlwe_new_packing_KS_key(
        out_key: TRLWE_Key,
        in_key: TLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
        torus_base: ::libc::c_int,
    ) -> LUT_Packing_KS_Key;
}
extern "C" {
    pub fn trlwe_packing_keyswitch(
        out: TRLWE,
        in_: *mut TLWE,
        ks_key: LUT_Packing_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_load_new_packing_KS_key(fd: *mut FILE) -> LUT_Packing_KS_Key;
}
extern "C" {
    pub fn trlwe_save_packing_KS_key(fd: *mut FILE, key: LUT_Packing_KS_Key);
}
extern "C" {
    pub fn trlwe_torus_packing(
        out: TRLWE,
        in_: *mut Torus,
        torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn free_trlwe_packing_ks_key(key: LUT_Packing_KS_Key);
}
extern "C" {
    pub fn trlwe_new_RL_key(
        key: TRLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> TRLWE_KS_Key;
}
extern "C" {
    pub fn trlwe_packing1_keyswitch(
        out: TRLWE,
        in_: TLWE,
        ks_key: Generic_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_new_priv_SK_KS_key(
        out_key: TRLWE_Key,
        in_key: TLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> Generic_KS_Key;
}
extern "C" {
    pub fn trlwe_priv_keyswitch(out: TRLWE, in_: TLWE, ks_key: Generic_KS_Key);
}
extern "C" {
    pub fn free_trlwe_generic_ks_key(key: Generic_KS_Key);
}
extern "C" {
    pub fn trlwe_new_packing1_KS_key(
        out_key: TRLWE_Key,
        in_key: TLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> Generic_KS_Key;
}
extern "C" {
    pub fn trlwe_new_packing1_KS_key_CDKS21(
        out_key: TRLWE_Key,
        in_key: TLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> *mut TRLWE_KS_Key;
}
extern "C" {
    pub fn trlwe_packing1_keyswitch_CDKS21(
        out: TRLWE,
        in_: TLWE,
        ks_key: *mut TRLWE_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_new_automorphism_KS_keyset(
        key: TRLWE_Key,
        skip_even: bool,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> *mut TRLWE_KS_Key;
}
extern "C" {
    pub fn trlwe_new_full_packing_KS_key(
        out_key: TRLWE_Key,
        in_key: TLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> TRLWE_KS_Key;
}
extern "C" {
    pub fn trlwe_full_packing_keyswitch(
        out: TRLWE,
        in_: *mut TLWE,
        size: u64,
        ks_key: TRLWE_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_save_generic_ks_key(fd: *mut FILE, key: Generic_KS_Key);
}
extern "C" {
    pub fn trlwe_load_new_generic_ks_key(fd: *mut FILE) -> Generic_KS_Key;
}
extern "C" {
    pub fn trlwe_new_priv_KS_key(
        out_key: TRLWE_Key,
        in_key: TRLWE_Key,
        t: ::libc::c_int,
        base_bit: ::libc::c_int,
    ) -> *mut TRLWE_KS_Key;
}
extern "C" {
    pub fn trlwe_priv_keyswitch_2(
        out: TRLWE,
        in_: TRLWE,
        ks_key: *mut TRLWE_KS_Key,
    );
}
extern "C" {
    pub fn trlwe_save_KS_key(fd: *mut FILE, key: TRLWE_KS_Key);
}
extern "C" {
    pub fn trlwe_load_new_KS_key(fd: *mut FILE) -> TRLWE_KS_Key;
}
extern "C" {
    pub fn new_bootstrap_key(
        out_key: TRGSW_Key,
        in_key: TLWE_Key,
        unfolding: ::libc::c_int,
    ) -> Bootstrap_Key;
}
extern "C" {
    pub fn blind_rotate(
        tv: TRLWE,
        a: *mut Torus,
        s: *mut TRGSW_DFT,
        size: ::libc::c_int,
    );
}
extern "C" {
    pub fn functional_bootstrap_wo_extract(
        out: TRLWE,
        tv: TRLWE,
        in_: TLWE,
        s: Bootstrap_Key,
        torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn multivalue_bootstrap_phase1(
        out: *mut TRLWE,
        in_: TLWE,
        s: Bootstrap_Key,
        torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn multivalue_bootstrap_phase2(
        out: TLWE,
        in_: *mut ::libc::c_int,
        rotated_tv: *mut TRLWE,
        torus_base: ::libc::c_int,
        log_torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn functional_bootstrap_trgsw_phase1(
        out: TRGSW_DFT,
        in_: TLWE,
        s: Bootstrap_Key,
        torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn functional_bootstrap_trgsw_phase2(
        out: TLWE,
        in_: TRGSW_DFT,
        tv: TRLWE,
    );
}
extern "C" {
    pub fn free_bootstrap_key(key: Bootstrap_Key);
}
extern "C" {
    pub fn save_bootstrap_key(fd: *mut FILE, key: Bootstrap_Key);
}
extern "C" {
    pub fn load_new_bootstrap_key(fd: *mut FILE) -> Bootstrap_Key;
}
extern "C" {
    pub fn multivalue_bootstrap_CLOT21(
        out: *mut TLWE,
        tv: TRLWE,
        in_: TLWE,
        key: Bootstrap_Key,
        torus_base: ::libc::c_int,
        n_luts: ::libc::c_int,
    );
}
extern "C" {
    pub fn multivalue_bootstrap_UBR_phase1(
        out: *mut TRGSW_DFT,
        in_: TLWE,
        key: Bootstrap_Key,
    );
}
extern "C" {
    pub fn multivalue_bootstrap_UBR_phase2(
        out: TLWE,
        tv: TRLWE,
        in_: TLWE,
        sa: *mut TRGSW_DFT,
        key: Bootstrap_Key,
        torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn generate_rnd_seed(p: *mut u64);
}
extern "C" {
    pub fn generate_random_bytes(amount: u64, pointer: *mut u8);
}
extern "C" {
    pub fn generate_normal_random(sigma: f64) -> f64;
}
extern "C" {
    pub fn generate_torus_normal_random_array(
        out: *mut Torus,
        sigma: f64,
        N: ::libc::c_int,
    );
}
extern "C" {
    pub fn new_bootstrap_key_ga(
        out_key: TRGSW_Key,
        in_key: TLWE_Key,
    ) -> Bootstrap_GA_Key;
}
extern "C" {
    pub fn functional_bootstrap_wo_extract_ga(
        out: TRLWE,
        tv: TRLWE,
        in_: TLWE,
        key: Bootstrap_GA_Key,
        torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn functional_bootstrap_ga(
        out: TLWE,
        tv: TRLWE,
        in_: TLWE,
        key: Bootstrap_GA_Key,
        torus_base: ::libc::c_int,
    );
}
extern "C" {
    pub fn free_bootstrap_key_ga(key: Bootstrap_GA_Key);
}
